--- a/code/web/az/blog/.env
+++ b/code/web/az/blog/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=base64:AphPO2QImAIEtbIBY20TbZTXR9V50QD3WELLXDpr6eo=
+APP_KEY=RHEheVD3Lpg92nx8AknB45XO9plYzZ5c
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
@@ -8,7 +8,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='samtt'
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=''
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
